--- a/src/pages/Contacto.css
+++ b/src/pages/Contacto.css
@@ -1,4 +1,4 @@
-.home {
+.contacto {
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -6,7 +6,7 @@
     align-items: center;
     position: relative;
 }
-.home-contenido{
+.contacto-contenido{
   position: absolute;
   top: 0;
   right: 0;
@@ -19,7 +19,7 @@
   flex-direction: column;
   z-index: 2;
 }
-.home-principal {
+.contacto-principal {
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -28,14 +28,14 @@
   flex-direction: column;
 }
 
-.home-titulo{
+.contacto-titulo{
     height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.home-titulo-texto{
+.contacto-titulo-texto{
     font-size: 50px;
     font-weight: 700;
     color: black;
@@ -43,4 +43,3 @@
     text-shadow: 2px 2px 1px white;
     text-align: center;
   }
-
