--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@
     width: 200px; 
     border-width: 2px;
     border-style: solid;
-    border-color: black;         
+    border-color: black;
+    border-radius: 10px;         
     background-color: white;
     color: black;
     padding: 20px;
@@ -37,6 +38,8 @@
     text-decoration: none;    
     color: black;             
     cursor: pointer;
-    
+    border-radius: 10px;   
 }
+
+
 
