--- a/src/pages/Servicios.css
+++ b/src/pages/Servicios.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Tagesschrift&display=swap');
+
 .servicio {
     width: 100%;
     min-height: 100vh;
@@ -36,10 +38,12 @@
 }
 
 .servicio-titulo-texto{
-    font-size: 50px;
+    font-family: "Anton", sans-serif;
+    font-style: normal;
+    font-size: 80px;
     font-weight: 700;
-    color: black;
+    color: #eae0c8;
     letter-spacing: 2px;
-    text-shadow: 2px 2px 1px white;
+    text-shadow: 4px 4px 4px #e9a642;
     text-align: center;
   }
