--- a/src/index.css
+++ b/src/index.css
@@ -5,40 +5,78 @@
     padding: 0;
 }
 
-.menu-lateral{
-    position: fixed;       
+.menu-lateral {
+    position: fixed;
     top: 20px;
-    bottom: 20px;                
-    left: 20px;              
-    width: 200px; 
-    border-width: 2px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 10px;         
-    background-color: white;
-    color: black;
-    padding: 20px;
-}
-.menu-lateral-logo{
-    text-align: center;
-}
-.menu-lateral-navegacion{
+    bottom: 20px;
+    left: 20px;
+    width: 220px;
+    padding: 24px;
+
+    background-color: #3e2e20;
+    color: #eae0c8;
+
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    border: 1px solid #bfa065;
+
     display: flex;
     flex-direction: column;
-    height: 100%;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu-lateral-logo {
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 24px;
+    cursor: pointer;
+    text-align: center;
+    color: #eae0c8;
+}
+
+.menu-lateral-navegacion {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 100%;
     align-items: center;
 }
-.menu-lateral-navegacion-item{
-    display: block; 
-    border: 2px solid black; 
-    padding: 10px 15px;       
-    margin: 10px 0;
-    text-align: center;       
-    text-decoration: none;    
-    color: black;             
+
+.menu-lateral-navegacion-item {
+    width: 100%;
+    padding: 12px;
+    border-radius: 10px;
+
+    text-align: center;
+    text-decoration: none;
+    font-weight: 500;
+    font-weight: bold;
+
+    background-color: #bfa065;
+    color: #1e1a14;
+    border: 1px solid #ccc;
+
     cursor: pointer;
-    border-radius: 10px;   
+    transition: all 0.3s ease;
+}
+
+.menu-lateral-navegacion-item:hover {
+    background-color: black;
+    color: white;
+    border-color: black;
+    transform: scale(1.05);
+}
+
+
+body {
+  background-image: url('/biblioteca.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 
