--- a/src/pages/Servicios.css
+++ b/src/pages/Servicios.css
@@ -21,13 +21,19 @@
   flex-direction: column;
   z-index: 2;
 }
-.servicio-principal {
-  width: 100%;
+.servicios-div {
+  margin-left: 260px; /* Espacio para el menú lateral (220px + un poco más de separación) */
+  width: calc(100% - 260px);
   min-height: 100vh;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   flex-direction: column;
+}
+.servicios-principal {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 20px;
 }
 
 .servicio-titulo{
@@ -46,4 +52,34 @@
     letter-spacing: 2px;
     text-shadow: 4px 4px 1px #e9a642;
     text-align: center;
-  }
+}
+.servicios-cuerpo {
+    width: 100%;
+    max-width: 1000px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columnas */
+    gap: 30px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+.servicios-card {
+    background-color: #bfa065;
+    color: #1e1a14;
+    border: 1px solid #3e2e20;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+}
+
+.servicios-card:hover {
+    transform: scale(1.05);
+}
+.servicio-principal > div {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding-left: 95px; 
+}
